--- a/RicCV.html
+++ b/RicCV.html
@@ -2,15 +2,15 @@
 	
 	
 <div>
-	<head>
-		<header><font size=6>Ricardo Manuel Gonçalves Cabral</font></header>
+	<head><link href="css/s1.css" rel="stylesheet">
+		<header><h1>Ricardo Manuel Gonçalves Cabral</h1>
+		<img src="img\"></header>
 	</head>
 </div>
 	
 <div>	
 	<body>
-		<font style=Calibri><font size= 4>
-		<h3> <font color=gray>Informação Pessoal </font color></h3>
+		<h2> Informação Pessoal </h2>
 		
 			<ul>
 				<li> <u>Idade:</u> 26 anos</li>
@@ -20,29 +20,29 @@
 						
 			 
 			
-		<h3> <font color=gray>Informação Profissional </font color></h3>
-		• <u>2018-2019</u> •
+		<h2>Informação Profissional</h2>
+		<h4>• 2018-2019 • </h4>
 		<ul>
 			<li> Estância de Ski - Serra da Estrela </li>
 			<li> Teleperformance - Costumer Sales Representative </li>
 		</ul>
-		• <u>2019-2020</u> •
+		<h4>• 2019-2020 • </h4>
 		<ul>
 			<li> Gestor Comercial Vodafone </li>
 			<li> Colaborador Continente </li>
 		</ul>
-		• <u>2020-Presente</u> •
+		<h4>• 2020-Presente • </h4>
 		<ul>
 			<li>Programa UPSKILL </li>
-		</ul></font size></font style>
+		</ul>
 			
-			
+		<p></p>	
 	</body>
 
 </div>
 
 
 <footer>
-Programa UPSKILL 2020 
+<h3>Programa UPSKILL 2020</h3> 
 </footer>
 </html>
